--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,45 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.9.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        javaVersion = '17'
+        springBootVersion = '3.2.2'
+        springDependencyManagementVersion = '1.1.0'
+        lombokVersion = '1.18.26'
+        junitVersion = '5.10.2'
+        springOpenApiVerion = "2.3.0"
+    }
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-
-group = 'io.datawire.labs'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+plugins {
+    id "java"
+}
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
+description = "Open API Demo"
+sourceCompatibility = "${javaVersion}"
+targetCompatibility = "${javaVersion}"
+
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	runtime('org.springframework.boot:spring-boot-devtools')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    // spring
+    implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+    implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:${springOpenApiVerion}")
+
+    // spring test
+    testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+
+    //lombok
+    compileOnly("org.projectlombok:lombok:${lombokVersion}")
+    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
+    testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
+    testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")
+
+    //JUnit
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+}
+
+tasks.named("test") {
+    useJUnitPlatform()
 }
