--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -55,6 +55,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: gradle/wrapper-validation-action@v3
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
